--- a/Pokedex/Base.lproj/Main.storyboard
+++ b/Pokedex/Base.lproj/Main.storyboard
@@ -1,24 +1,154 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_0" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Pokemon Solid.ttf">
+            <string>PokemonSolidNormal</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Pokedex" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iO5-iU-2fx">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="65"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pokedex" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3eS-G8-kOA">
+                                        <rect key="frame" x="93" y="27" width="134" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="hmB-da-aoR"/>
+                                            <constraint firstAttribute="width" constant="134" id="xck-Zy-x8S"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="PokemonSolidNormal" family="Pokemon Solid" pointSize="23"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6ql-Ze-AXW">
+                                        <rect key="frame" x="286" y="31" width="26" height="26"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="26" id="R5e-hY-MxY"/>
+                                            <constraint firstAttribute="height" constant="26" id="pA9-Nn-O3F"/>
+                                        </constraints>
+                                        <state key="normal" image="music.png"/>
+                                        <connections>
+                                            <action selector="musicBtnPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="utp-S4-3TA"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="1" green="0.34509803919999998" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="3eS-G8-kOA" secondAttribute="bottom" constant="8" id="AHv-t0-iyw"/>
+                                    <constraint firstAttribute="height" constant="65" id="Qdb-MW-Q1j"/>
+                                    <constraint firstAttribute="trailing" secondItem="6ql-Ze-AXW" secondAttribute="trailing" constant="8" id="d9b-Dz-K9w"/>
+                                    <constraint firstAttribute="bottom" secondItem="6ql-Ze-AXW" secondAttribute="bottom" constant="8" id="n8d-UI-EHa"/>
+                                    <constraint firstItem="3eS-G8-kOA" firstAttribute="centerX" secondItem="iO5-iU-2fx" secondAttribute="centerX" id="zuQ-yd-tWC"/>
+                                </constraints>
+                            </view>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="FNy-7r-ebj">
+                                <rect key="frame" x="0.0" y="65" width="320" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="S1X-ww-fDV"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="Lsj-cZ-U1A">
+                                <rect key="frame" x="0.0" y="109" width="320" height="459"/>
+                            </imageView>
+                            <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="xT1-Ov-eiV">
+                                <rect key="frame" x="20" y="109" width="280" height="439"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ucT-qs-oje">
+                                    <size key="itemSize" width="106" height="100"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PokeCell" id="zYd-ro-0YL" customClass="PokeCell" customModule="Pokedex" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="106" height="100"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="106" height="100"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" alpha="0.80000000000000004" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="4" translatesAutoresizingMaskIntoConstraints="NO" id="w1i-Nt-9zQ">
+                                                    <rect key="frame" x="0.0" y="0.0" width="106" height="80"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="80" id="jpu-na-ww7"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Charmander" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0db-8y-A5s">
+                                                    <rect key="frame" x="0.0" y="79" width="106" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <color key="backgroundColor" red="1" green="0.34509803919999998" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="w1i-Nt-9zQ" firstAttribute="leading" secondItem="zYd-ro-0YL" secondAttribute="leading" id="2oH-CT-pkQ"/>
+                                            <constraint firstAttribute="trailing" secondItem="w1i-Nt-9zQ" secondAttribute="trailing" id="fiA-TS-vXA"/>
+                                            <constraint firstItem="w1i-Nt-9zQ" firstAttribute="top" secondItem="zYd-ro-0YL" secondAttribute="top" id="ndj-87-l50"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="backgroundView" destination="Lsj-cZ-U1A" id="LzD-Bd-b15"/>
+                                            <outlet property="nameLbl" destination="0db-8y-A5s" id="kyg-xZ-rX7"/>
+                                            <outlet property="thumbImg" destination="w1i-Nt-9zQ" id="Dau-FQ-EmB"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="xT1-Ov-eiV" firstAttribute="top" secondItem="FNy-7r-ebj" secondAttribute="bottom" constant="20" id="3uR-l5-iid"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Lsj-cZ-U1A" secondAttribute="trailing" id="9sy-xD-DhH"/>
+                            <constraint firstItem="xT1-Ov-eiV" firstAttribute="top" secondItem="FNy-7r-ebj" secondAttribute="bottom" id="D4V-eo-Z9x"/>
+                            <constraint firstItem="iO5-iU-2fx" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="JdM-n6-BY9"/>
+                            <constraint firstItem="Lsj-cZ-U1A" firstAttribute="top" secondItem="FNy-7r-ebj" secondAttribute="bottom" id="Lpu-hP-JPc"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="xT1-Ov-eiV" secondAttribute="bottom" constant="20" id="Nv0-GB-svd"/>
+                            <constraint firstItem="xT1-Ov-eiV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="PKc-M3-beH"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="xT1-Ov-eiV" secondAttribute="trailing" constant="20" id="YW9-3I-wnq"/>
+                            <constraint firstItem="FNy-7r-ebj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="YpQ-gf-nFK"/>
+                            <constraint firstItem="Lsj-cZ-U1A" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="aPU-x1-WVS"/>
+                            <constraint firstItem="iO5-iU-2fx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="cD5-Wa-Doc"/>
+                            <constraint firstItem="FNy-7r-ebj" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="e6v-K3-Csp"/>
+                            <constraint firstItem="FNy-7r-ebj" firstAttribute="top" secondItem="iO5-iU-2fx" secondAttribute="bottom" id="lP4-NE-YxL"/>
+                            <constraint firstItem="iO5-iU-2fx" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="re5-vn-kRl"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Lsj-cZ-U1A" secondAttribute="bottom" id="yPH-hl-MbT"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="collection" destination="xT1-Ov-eiV" id="5gM-3l-T9f"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="116.25" y="117.25352112676056"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="4" width="120" height="120"/>
+        <image name="background" width="1920" height="1200"/>
+        <image name="music.png" width="100" height="100"/>
+    </resources>
 </document>
